# app/Http/Resources/MessageResource.php
@@ -14,6 +14,14 @@ class MessageResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id'              => $this->id,
+            'full_name'       => $this->full_name,
+            'email'           => $this->email,
+            'phone'           => $this->phone,
+            'message'         => $this->message,
+            'date'            => $this->date,
+            'status'          => $this->status,
+        ];
     }
 }
